# kadaster-kik-inzage-api-python-client

./: .cookiecutter.json  .flake8  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  gen.sh  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
src/kikinzage/: __init__.py  __main__.py
src/kikinzage/client/: __init__.py  asyncio.py  base.py  default.py  errors.py  utils.py
src/kikinzage/models/: __init__.py  adres.py  collectie.py  eigendomsinformatie.py  enum.py  generated.py  misc.py  persoon.py  product.py  stukken.py  zekerheid.py
tests/: __init__.py  conftest.py  responses.json  test_adres.py  test_brondocument.py  test_client.py  test_datuminformatie.py  test_eigenaarsinformatie.py  test_eigendomsinformatie.py  test_hypotheekinformatie.py  test_kadastraalpersoonidentificatie.py  test_kadastralekaart.py  test_main.py  test_models.py  test_objectlijstpersoon.py  test_personen.py
tests/client/: conftest.py  test_client.py  test_eigendomsinformatie.py
