[tool.poetry]
name = "kadaster-kikinzage-client"
version = "0.1.4"
description = " Kadaster - KIK Inzage API Python client"
authors = ["Jelmer Draaijer <info@jelmert.nl>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/foarsitter/kadaster-kik-inzage-api-python-client"
repository = "https://github.com/foarsitter/kadaster-kik-inzage-api-python-client"
documentation = "https://kadaster-kik-inzage-api-python-client.readthedocs.io"
packages = [
    { include = "kikinzage", from = "src" },
]
classifiers = [
    "Development Status :: 4 - Beta",
]

[tool.poetry.urls]
Changelog = "https://github.com/foarsitter/kadaster-kik-inzage-api-python-client/releases"

[tool.poetry.dependencies]
python = ">=3.8.1"
click = ">=8.0.1"
pydantic = ">=2.0a1"
httpx = ">=0.24.1"
typing-extensions = "^4.6.3"

[tool.poetry.group.dev.dependencies]
Pygments = ">=2.10.0"
bandit = ">=1.7.4"
black = ">=21.10b0"
coverage = { extras = ["toml"], version = ">=6.2" }
flake8 = ">=6.0.0"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = { extras = ["colors"], version = ">=0.15.10" }
myst-parser = { version = ">=0.16.1" }
respx = ">=0.20.1"
pytest-asyncio = "^0.21.0"

[tool.poetry.scripts]
kikinzage = "kikinzage.__main__:main"


[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["kikinzage", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true
plugins = ["pydantic.mypy"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
